[package]
name = "intcode"
version = "0.1.0"
authors = ["Alessandro Cavicchioli <acavicchioli@dundee.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.11"

[dev-dependencies]
maplit = "1.0.2"
